Add dev dependency group with pytest in pyproject.toml

--- a/python/ndtensors_rs/pyproject.toml
+++ b/python/ndtensors_rs/pyproject.toml
@@ -51,3 +51,8 @@ path = "hatch_build.py"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
